--- a/config.yaml
+++ b/config.yaml
@@ -16,24 +16,23 @@ logo: Logo.png
 #################
 # Optional settings:
 
+index: dude/ay/dude.md
+
 # Theme to use.
 theme:
-  - Wiki
+  # - Wiki
   # - Wiki-Dark
-  # - Default
-  # - Default-twilight
+  - Default
+  - Default-twilight
 
-# Highlight themes: default, monokai, tomorrow, sunbust. See all on https://highlightjs.org/static/demo/.
-highlight_theme: Tomorrow-Night
+# Code highlighting themes: default, monokai, tomorrow, sunbust, darcula.
+# See all on https://highlightjs.org/static/demo/.
+highlight_theme: darcula # Tomorrow-Night
 
 # Use transparent bacground on code?
 code_transparent_bg: False
 
 open_dirs: 1 # (int or 'all')
 
+# Render the menu footer
 # render_footer: true
-
-
-#binds:
-#  search: f
-#  switch_raw_rendered: r
