--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     },
     "authors": [
         {
-            "name": "xy"
+            "name": "xy2z",
+            "email": "xy2z@pm.me"
         }
     ],
     "require": {
