--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         }
     ],
     "require": {
-        "twig/twig": "^2.4"
+        "twig/twig": "^2.4",
+        "symfony/yaml": "^4.2"
     }
 }
