--- a/config/config-example.yaml
+++ b/config/config-example.yaml
@@ -52,3 +52,6 @@ show_file_extension: true
 # [string] How to render links and dirs.
 # Values: default, ucfirst, ucwords, uppercase, lowercase.
 menu_link_format: default
+
+# [float] Max file size (in MB) to render. If file is larger, a download link will be shown.
+render_max_file_size: 50
