--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     interval: daily
     time: "04:00"
   open-pull-requests-limit: 10
-  target-branch: develop
+  target-branch: master
   ignore:
   - dependency-name: symfony/yaml
     versions:
@@ -22,7 +22,7 @@ updates:
     interval: daily
     time: "04:00"
   open-pull-requests-limit: 10
-  target-branch: develop
+  target-branch: master
   ignore:
   - dependency-name: php
     versions:
