--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: xy2z/pinedocs-test:latest
+          tags: xy2z/pinedocs:latest
