--- a/config/config-example.yaml
+++ b/config/config-example.yaml
@@ -74,3 +74,7 @@ render_max_file_size: 50
 
 # [bool] Enable MermaidJS
 # enable_mermaidjs: false
+
+# [string] The theme of MermaidJS to use.
+# See available color schemes at https://mermaid-js.github.io/mermaid/#/theming?id=deployable-themes
+# mermaidjs_theme: default
